simple.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: assignment_statement
    5          | print_statement
    6          | if_statement
    7          | while_statement
    8          | for_statement
    9          | do_statement
   10          | break_statement
   11          | continue_statement
   12          | return_statement
   13          | error_statement
   14          | function_declaration
   15          | function_call
   16          | const_declaration
   17          | switch_statement

   18 assignment_statement: IDENTIFIER ASSIGN expression SEMICOLON
   19                     | IDENTIFIER ASSIGN function_call

   20 function_declaration: FUNCTION IDENTIFIER LPAREN function_parameters RPAREN LBRACE statement_list RBRACE

   21 function_parameters: function_parameters COMMA IDENTIFIER
   22                    | IDENTIFIER

   23 function_call: IDENTIFIER LPAREN function_arguments RPAREN SEMICOLON

   24 function_arguments: function_arguments COMMA expression
   25                   | expression

   26 const_declaration: CONST assignment_statement

   27 switch_statement: SWITCH LPAREN IDENTIFIER RPAREN LBRACE switch_statement_details RBRACE

   28 switch_statement_details: switch_statement_details switch_case
   29                         | switch_case

   30 switch_case: CASE expression COLON statement_list
   31            | DEFAULT COLON statement_list

   32 print_statement: PRINT expression SEMICOLON

   33 if_statement: IF LPAREN expression RPAREN LBRACE statement_list RBRACE
   34             | IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

   35 while_statement: WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE

   36 for_statement: FOR LPAREN for_init expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

   37 for_init: assignment_statement
   38         | SEMICOLON

   39 for_update: assignment_statement
   40           | SEMICOLON

   41 do_statement: DO LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON

   42 break_statement: BREAK SEMICOLON

   43 continue_statement: CONTINUE SEMICOLON

   44 return_statement: RETURN expression SEMICOLON

   45 error_statement: ERROR SEMICOLON

   46 expression: INTEGER
   47           | STRING
   48           | IDENTIFIER
   49           | LPAREN expression RPAREN
   50           | expression PLUS expression
   51           | expression MINUS expression
   52           | expression TIMES expression
   53           | expression DIVIDE expression
   54           | expression EQUAL expression
   55           | expression NOTEQUAL expression
   56           | expression GREATER expression
   57           | expression GREATEREQUAL expression
   58           | expression LESS expression
   59           | expression LESSEQUAL expression
   60           | NOT expression
   61           | expression OR expression
   62           | expression AND expression
   63           | MINUS expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <sval> (258) 18 19 20 21 22 23 27 48
    STRING <sval> (259) 47
    INTEGER <ival> (260) 46
    PRINT (261) 32
    IF (262) 33 34
    ELSE (263) 34
    WHILE (264) 35 41
    FOR (265) 36
    DO (266) 41
    BREAK (267) 42
    CONTINUE (268) 43
    RETURN (269) 44
    ERROR (270) 45
    ASSIGN (271) 18 19
    PLUS (272) 50
    MINUS (273) 51 63
    TIMES (274) 52
    DIVIDE (275) 53
    LPAREN (276) 20 23 27 33 34 35 36 41 49
    RPAREN (277) 20 23 27 33 34 35 36 41 49
    SEMICOLON (278) 18 23 32 36 38 40 41 42 43 44 45
    EQUAL (279) 54
    NOTEQUAL (280) 55
    GREATER (281) 56
    GREATEREQUAL (282) 57
    LESS (283) 58
    LESSEQUAL (284) 59
    COMMA (285) 21 24
    LBRACE (286) 20 27 33 34 35 36 41
    RBRACE (287) 20 27 33 34 35 36 41
    FUNCTION (288) 20
    CONST (289) 26
    OR (290) 61
    AND (291) 62
    NOT (292) 60
    SWITCH (293) 27
    CASE (294) 30
    COLON (295) 30 31
    DEFAULT (296) 31
    UMINUS (297)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program (44)
        on left: 1
        on right: 0
    statement_list (45)
        on left: 2 3
        on right: 1 3 20 30 31 33 34 35 36 41
    statement (46)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 2 3
    assignment_statement (47)
        on left: 18 19
        on right: 4 26 37 39
    function_declaration (48)
        on left: 20
        on right: 14
    function_parameters (49)
        on left: 21 22
        on right: 20 21
    function_call (50)
        on left: 23
        on right: 15 19
    function_arguments (51)
        on left: 24 25
        on right: 23 24
    const_declaration (52)
        on left: 26
        on right: 16
    switch_statement (53)
        on left: 27
        on right: 17
    switch_statement_details (54)
        on left: 28 29
        on right: 27 28
    switch_case (55)
        on left: 30 31
        on right: 28 29
    print_statement (56)
        on left: 32
        on right: 5
    if_statement (57)
        on left: 33 34
        on right: 6
    while_statement (58)
        on left: 35
        on right: 7
    for_statement (59)
        on left: 36
        on right: 8
    for_init (60)
        on left: 37 38
        on right: 36
    for_update (61)
        on left: 39 40
        on right: 36
    do_statement (62)
        on left: 41
        on right: 9
    break_statement (63)
        on left: 42
        on right: 10
    continue_statement (64)
        on left: 43
        on right: 11
    return_statement (65)
        on left: 44
        on right: 12
    error_statement (66)
        on left: 45
        on right: 13
    expression (67)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 18 24 25 30 32 33 34 35 36 41 44 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    DO          shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    RETURN      shift, and go to state 9
    ERROR       shift, and go to state 10
    FUNCTION    shift, and go to state 11
    CONST       shift, and go to state 12
    SWITCH      shift, and go to state 13

    program               go to state 14
    statement_list        go to state 15
    statement             go to state 16
    assignment_statement  go to state 17
    function_declaration  go to state 18
    function_call         go to state 19
    const_declaration     go to state 20
    switch_statement      go to state 21
    print_statement       go to state 22
    if_statement          go to state 23
    while_statement       go to state 24
    for_statement         go to state 25
    do_statement          go to state 26
    break_statement       go to state 27
    continue_statement    go to state 28
    return_statement      go to state 29
    error_statement       go to state 30


State 1

   18 assignment_statement: IDENTIFIER . ASSIGN expression SEMICOLON
   19                     | IDENTIFIER . ASSIGN function_call
   23 function_call: IDENTIFIER . LPAREN function_arguments RPAREN SEMICOLON

    ASSIGN  shift, and go to state 31
    LPAREN  shift, and go to state 32


State 2

   32 print_statement: PRINT . expression SEMICOLON

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 39


State 3

   33 if_statement: IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
   34             | IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 40


State 4

   35 while_statement: WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 41


State 5

   36 for_statement: FOR . LPAREN for_init expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 42


State 6

   41 do_statement: DO . LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON

    LBRACE  shift, and go to state 43


State 7

   42 break_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 44


State 8

   43 continue_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 45


State 9

   44 return_statement: RETURN . expression SEMICOLON

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 46


State 10

   45 error_statement: ERROR . SEMICOLON

    SEMICOLON  shift, and go to state 47


State 11

   20 function_declaration: FUNCTION . IDENTIFIER LPAREN function_parameters RPAREN LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 48


State 12

   26 const_declaration: CONST . assignment_statement

    IDENTIFIER  shift, and go to state 49

    assignment_statement  go to state 50


State 13

   27 switch_statement: SWITCH . LPAREN IDENTIFIER RPAREN LBRACE switch_statement_details RBRACE

    LPAREN  shift, and go to state 51


State 14

    0 $accept: program . $end

    $end  shift, and go to state 52


State 15

    1 program: statement_list .
    3 statement_list: statement_list . statement

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    DO          shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    RETURN      shift, and go to state 9
    ERROR       shift, and go to state 10
    FUNCTION    shift, and go to state 11
    CONST       shift, and go to state 12
    SWITCH      shift, and go to state 13

    $default  reduce using rule 1 (program)

    statement             go to state 53
    assignment_statement  go to state 17
    function_declaration  go to state 18
    function_call         go to state 19
    const_declaration     go to state 20
    switch_statement      go to state 21
    print_statement       go to state 22
    if_statement          go to state 23
    while_statement       go to state 24
    for_statement         go to state 25
    do_statement          go to state 26
    break_statement       go to state 27
    continue_statement    go to state 28
    return_statement      go to state 29
    error_statement       go to state 30


State 16

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


State 17

    4 statement: assignment_statement .

    $default  reduce using rule 4 (statement)


State 18

   14 statement: function_declaration .

    $default  reduce using rule 14 (statement)


State 19

   15 statement: function_call .

    $default  reduce using rule 15 (statement)


State 20

   16 statement: const_declaration .

    $default  reduce using rule 16 (statement)


State 21

   17 statement: switch_statement .

    $default  reduce using rule 17 (statement)


State 22

    5 statement: print_statement .

    $default  reduce using rule 5 (statement)


State 23

    6 statement: if_statement .

    $default  reduce using rule 6 (statement)


State 24

    7 statement: while_statement .

    $default  reduce using rule 7 (statement)


State 25

    8 statement: for_statement .

    $default  reduce using rule 8 (statement)


State 26

    9 statement: do_statement .

    $default  reduce using rule 9 (statement)


State 27

   10 statement: break_statement .

    $default  reduce using rule 10 (statement)


State 28

   11 statement: continue_statement .

    $default  reduce using rule 11 (statement)


State 29

   12 statement: return_statement .

    $default  reduce using rule 12 (statement)


State 30

   13 statement: error_statement .

    $default  reduce using rule 13 (statement)


State 31

   18 assignment_statement: IDENTIFIER ASSIGN . expression SEMICOLON
   19                     | IDENTIFIER ASSIGN . function_call

    IDENTIFIER  shift, and go to state 54
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    function_call  go to state 55
    expression     go to state 56


State 32

   23 function_call: IDENTIFIER LPAREN . function_arguments RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    function_arguments  go to state 57
    expression          go to state 58


State 33

   48 expression: IDENTIFIER .

    $default  reduce using rule 48 (expression)


State 34

   47 expression: STRING .

    $default  reduce using rule 47 (expression)


State 35

   46 expression: INTEGER .

    $default  reduce using rule 46 (expression)


State 36

   63 expression: MINUS . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 59


State 37

   49 expression: LPAREN . expression RPAREN

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 60


State 38

   60 expression: NOT . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 61


State 39

   32 print_statement: PRINT expression . SEMICOLON
   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    PLUS          shift, and go to state 62
    MINUS         shift, and go to state 63
    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    SEMICOLON     shift, and go to state 66
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74


State 40

   33 if_statement: IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
   34             | IF LPAREN . expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 75


State 41

   35 while_statement: WHILE LPAREN . expression RPAREN LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 76


State 42

   36 for_statement: FOR LPAREN . for_init expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 49
    SEMICOLON   shift, and go to state 77

    assignment_statement  go to state 78
    for_init              go to state 79


State 43

   41 do_statement: DO LBRACE . statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    DO          shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    RETURN      shift, and go to state 9
    ERROR       shift, and go to state 10
    FUNCTION    shift, and go to state 11
    CONST       shift, and go to state 12
    SWITCH      shift, and go to state 13

    statement_list        go to state 80
    statement             go to state 16
    assignment_statement  go to state 17
    function_declaration  go to state 18
    function_call         go to state 19
    const_declaration     go to state 20
    switch_statement      go to state 21
    print_statement       go to state 22
    if_statement          go to state 23
    while_statement       go to state 24
    for_statement         go to state 25
    do_statement          go to state 26
    break_statement       go to state 27
    continue_statement    go to state 28
    return_statement      go to state 29
    error_statement       go to state 30


State 44

   42 break_statement: BREAK SEMICOLON .

    $default  reduce using rule 42 (break_statement)


State 45

   43 continue_statement: CONTINUE SEMICOLON .

    $default  reduce using rule 43 (continue_statement)


State 46

   44 return_statement: RETURN expression . SEMICOLON
   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    PLUS          shift, and go to state 62
    MINUS         shift, and go to state 63
    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    SEMICOLON     shift, and go to state 81
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74


State 47

   45 error_statement: ERROR SEMICOLON .

    $default  reduce using rule 45 (error_statement)


State 48

   20 function_declaration: FUNCTION IDENTIFIER . LPAREN function_parameters RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 82


State 49

   18 assignment_statement: IDENTIFIER . ASSIGN expression SEMICOLON
   19                     | IDENTIFIER . ASSIGN function_call

    ASSIGN  shift, and go to state 31


State 50

   26 const_declaration: CONST assignment_statement .

    $default  reduce using rule 26 (const_declaration)


State 51

   27 switch_statement: SWITCH LPAREN . IDENTIFIER RPAREN LBRACE switch_statement_details RBRACE

    IDENTIFIER  shift, and go to state 83


State 52

    0 $accept: program $end .

    $default  accept


State 53

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


State 54

   23 function_call: IDENTIFIER . LPAREN function_arguments RPAREN SEMICOLON
   48 expression: IDENTIFIER .

    LPAREN  shift, and go to state 32

    $default  reduce using rule 48 (expression)


State 55

   19 assignment_statement: IDENTIFIER ASSIGN function_call .

    $default  reduce using rule 19 (assignment_statement)


State 56

   18 assignment_statement: IDENTIFIER ASSIGN expression . SEMICOLON
   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    PLUS          shift, and go to state 62
    MINUS         shift, and go to state 63
    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    SEMICOLON     shift, and go to state 84
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74


State 57

   23 function_call: IDENTIFIER LPAREN function_arguments . RPAREN SEMICOLON
   24 function_arguments: function_arguments . COMMA expression

    RPAREN  shift, and go to state 85
    COMMA   shift, and go to state 86


State 58

   25 function_arguments: expression .
   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    PLUS          shift, and go to state 62
    MINUS         shift, and go to state 63
    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74

    $default  reduce using rule 25 (function_arguments)


State 59

   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression
   63           | MINUS expression .

    $default  reduce using rule 63 (expression)


State 60

   49 expression: LPAREN expression . RPAREN
   50           | expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    PLUS          shift, and go to state 62
    MINUS         shift, and go to state 63
    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    RPAREN        shift, and go to state 87
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74


State 61

   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   60           | NOT expression .
   61           | expression . OR expression
   62           | expression . AND expression

    $default  reduce using rule 60 (expression)


State 62

   50 expression: expression PLUS . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 88


State 63

   51 expression: expression MINUS . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 89


State 64

   52 expression: expression TIMES . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 90


State 65

   53 expression: expression DIVIDE . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 91


State 66

   32 print_statement: PRINT expression SEMICOLON .

    $default  reduce using rule 32 (print_statement)


State 67

   54 expression: expression EQUAL . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 92


State 68

   55 expression: expression NOTEQUAL . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 93


State 69

   56 expression: expression GREATER . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 94


State 70

   57 expression: expression GREATEREQUAL . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 95


State 71

   58 expression: expression LESS . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 96


State 72

   59 expression: expression LESSEQUAL . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 97


State 73

   61 expression: expression OR . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 98


State 74

   62 expression: expression AND . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 99


State 75

   33 if_statement: IF LPAREN expression . RPAREN LBRACE statement_list RBRACE
   34             | IF LPAREN expression . RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    PLUS          shift, and go to state 62
    MINUS         shift, and go to state 63
    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    RPAREN        shift, and go to state 100
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74


State 76

   35 while_statement: WHILE LPAREN expression . RPAREN LBRACE statement_list RBRACE
   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    PLUS          shift, and go to state 62
    MINUS         shift, and go to state 63
    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    RPAREN        shift, and go to state 101
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74


State 77

   38 for_init: SEMICOLON .

    $default  reduce using rule 38 (for_init)


State 78

   37 for_init: assignment_statement .

    $default  reduce using rule 37 (for_init)


State 79

   36 for_statement: FOR LPAREN for_init . expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 102


State 80

    3 statement_list: statement_list . statement
   41 do_statement: DO LBRACE statement_list . RBRACE WHILE LPAREN expression RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    DO          shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    RETURN      shift, and go to state 9
    ERROR       shift, and go to state 10
    RBRACE      shift, and go to state 103
    FUNCTION    shift, and go to state 11
    CONST       shift, and go to state 12
    SWITCH      shift, and go to state 13

    statement             go to state 53
    assignment_statement  go to state 17
    function_declaration  go to state 18
    function_call         go to state 19
    const_declaration     go to state 20
    switch_statement      go to state 21
    print_statement       go to state 22
    if_statement          go to state 23
    while_statement       go to state 24
    for_statement         go to state 25
    do_statement          go to state 26
    break_statement       go to state 27
    continue_statement    go to state 28
    return_statement      go to state 29
    error_statement       go to state 30


State 81

   44 return_statement: RETURN expression SEMICOLON .

    $default  reduce using rule 44 (return_statement)


State 82

   20 function_declaration: FUNCTION IDENTIFIER LPAREN . function_parameters RPAREN LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 104

    function_parameters  go to state 105


State 83

   27 switch_statement: SWITCH LPAREN IDENTIFIER . RPAREN LBRACE switch_statement_details RBRACE

    RPAREN  shift, and go to state 106


State 84

   18 assignment_statement: IDENTIFIER ASSIGN expression SEMICOLON .

    $default  reduce using rule 18 (assignment_statement)


State 85

   23 function_call: IDENTIFIER LPAREN function_arguments RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 107


State 86

   24 function_arguments: function_arguments COMMA . expression

    IDENTIFIER  shift, and go to state 33
    STRING      shift, and go to state 34
    INTEGER     shift, and go to state 35
    MINUS       shift, and go to state 36
    LPAREN      shift, and go to state 37
    NOT         shift, and go to state 38

    expression  go to state 108


State 87

   49 expression: LPAREN expression RPAREN .

    $default  reduce using rule 49 (expression)


State 88

   50 expression: expression . PLUS expression
   50           | expression PLUS expression .
   51           | expression . MINUS expression
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74

    $default  reduce using rule 50 (expression)


State 89

   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   51           | expression MINUS expression .
   52           | expression . TIMES expression
   53           | expression . DIVIDE expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . GREATER expression
   57           | expression . GREATEREQUAL expression
   58           | expression . LESS expression
   59           | expression . LESSEQUAL expression
   61           | expression . OR expression
   62           | expression . AND expression

    TIMES         shift, and go to state 64
    DIVIDE        shift, and go to state 65
    EQUAL         shift, and go to state 67
    NOTEQUAL      shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    LESS          shift, and go to state 71
    LESSEQUAL     shift, and go to state 72
    OR            shift, and go to state 73
    AND           shift, and go to state 74

    $default  reduce using rule 51 (expression)


State 90
